--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -958,7 +958,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #e6c63b;
+  background-color: #353535;
 }
 .cid-sFCw1qGFAI button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1398,7 +1398,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #e6c63b;
+  background-color: #353535;
 }
 .cid-sFCw1qGFAI button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1470,7 +1470,7 @@ a {
 }
 .cid-sSV9vSduOb {
   padding-top: 5rem;
-  padding-bottom: 0rem;
+  padding-bottom: 1rem;
   background-color: #232323;
 }
 .cid-sSV9vSduOb .mbr-section-title {
